# codebase_explainer

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: architecture.py  chat.py  debug.py  entrypoints.py  health.py  ingest.py  jobs.py  overview.py  repos.py  search.py  ui.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: mongo.py  repos.py
apps/api/app/schemas/: chat.py  ingest.py  overview.py  repo.py
apps/api/app/services/analysis/: architecture.py  entrypoints.py
apps/api/app/services/embeddings/: gemini_embedder.py  ollama_embedder.py
apps/api/app/services/indexing/: chunker.py  indexer.py
apps/api/app/services/ingestion/: file_tree.py  github_client.py  runner.py
apps/api/app/services/llm/: gemini_chat.py  local_t5.py  ollama_llm.py
apps/api/app/services/overview/: builder.py  summary.py
apps/api/app/services/rag/: answerer.py  intent.py  links.py  symbols.py
apps/api/app/static/: index.html
apps/api/app/utils/: repo_url.py
apps/api/tests/: test_github_client.py  test_local_vector_fallback.py  test_rag_answerer.py
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json
apps/web/app/: globals.css  layout.js  page.js
infra/docker/: docker-compose.yml
